# gpu-image-convolution

Gaussian Filter - GPU/: Readme.md  convolution  gaussian  kernel.cu  main.cu  support.h
Sharpen_filter/: .gitignore  Readme.md  commands.txt  main.cu  output.txt  run_rgb.sh  sharpen  sharpen_kernel.cu  sharpen_kernel.cuh
emboss/: CMakeLists.txt  Makefile  filter.cu  filters.cu  kernel.cu  kernel.h  main.cu  parser.cpp  parser.cu  parser.h  support.cu  support.h
emboss/includes/: filter.h  filters.h  kernel.h  parser.h  support.h
gaussian/gaussian_blur_CPU/: .gitignore  README.md  execution_time.txt  main.cu
gaussian/gaussian_blur_GPU/: .gitignore  Execution_time.txt  Readme.md
sobel/: sobel  sobel.cu  sobel3.out
